# liblog

./: CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
include/: log.h
src/: android.c  darwin.c  darwin.m  linux.c  mac.m  shared.c  unix.c  win.c  win32.cc
src/win32/: TraceLoggingDynamic.h
test/: CMakeLists.txt  debug.c  error.c  fatal.c  info.c  warn.c
